--- a/index.html
+++ b/index.html
@@ -12,11 +12,25 @@
     </style>
 </head>
 <body>
+<div id="inputs">
+    <input type="button" id="addGpx" value=" + add a gpx file" type="file" onclick="alert(444)">
+</div>
 <div id="map"></div>
 
 <script src="index.js" type="module">
 
 </script>
+
+<style>
+    #inputs {
+        position: absolute;
+        z-index: 999;
+        left: 10px;
+        top: 10px;
+        color: cornsilk;
+    }
+</style>
+
 
 </body>
 </html>
