--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 </head>
 <body>
 <div id="inputs">
-    <input type="button" id="addGpx" value=" + add a gpx file" type="file" onclick="alert(444)">
+    <input type="file" id="addGpx" name="gpx">
 </div>
 <div id="map"></div>
 
 <script src="index.js" type="module">
+
+
 
 </script>
 
