--- a/index.html
+++ b/index.html
@@ -1,24 +1,70 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>Mapbox gradient line</title>
-    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
+    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no"/>
     <script src="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js"></script>
-    <link href="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css" rel="stylesheet" />
+    <link href="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css" rel="stylesheet"/>
     <style>
-        body { margin: 0; padding: 0; }
-        #map { position: absolute; top: 0; bottom: 0; width: 100%; }
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        #map {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            width: 100%;
+        }
     </style>
 </head>
 <body>
 <div id="inputs">
     <input type="file" id="addGpx" name="gpx">
 </div>
+<div id="gradients">
+    <!--    AAAAAAAAAAAAAAAAAA-->
+    <!--    <div id="id1">-->
+    <!--        id1-->
+    <!--    </div>-->
+    <!--    <div id="id2">-->
+    <!--        id2-->
+    <!--    </div>-->
+    <!--    <div id="id3">-->
+    <!--        id3-->
+    <!--    </div>-->
+</div>
 <div id="map"></div>
 
-<script src="index.js" type="module">
 
+<script>
+    const grads = document.getElementById("gradients");
+
+
+    const COLORS = [
+        {color: 'purple', pos: 0},
+        {color: 'blue', pos: 10},
+        {color: 'green', pos: 15},
+        {color: 'yellow', pos: 25},
+        {color: 'orange', pos: 30},
+        {color: 'red', pos: 70}
+    ]
+
+
+    for (let i = 1; i < COLORS.length; i++) {
+        grads.innerHTML += `
+        <div id="id4" class="tableDiv"
+        style="background-image: linear-gradient(to right, ${COLORS[i-1].color}, ${COLORS[i].color});">
+            <div>${COLORS[i].pos}</div>
+        </div>`
+    }
+
+
+</script>
+
+<script src="index.js" type="module">
 </script>
 
 <style>
@@ -29,6 +75,26 @@
         top: 10px;
         color: cornsilk;
     }
+
+    #gradients {
+        position: absolute;
+        z-index: 999;
+        left: 100px;
+        bottom: 10px;
+        color: black;
+        text-align: right;
+        font-weight: bold;
+        color: white;
+        /*text-shadow: 0 0 3px #000;*/
+        text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+    }
+
+    .tableDiv {
+        display: table-cell;
+        width: 5vw;
+    }
+
+
 </style>
 
 
