--- a/index.html
+++ b/index.html
@@ -21,48 +21,9 @@
     </style>
 </head>
 <body>
-<div id="inputs">
-    <input type="file" id="addGpx" name="gpx">
-</div>
-<div id="gradients">
-    <!--    AAAAAAAAAAAAAAAAAA-->
-    <!--    <div id="id1">-->
-    <!--        id1-->
-    <!--    </div>-->
-    <!--    <div id="id2">-->
-    <!--        id2-->
-    <!--    </div>-->
-    <!--    <div id="id3">-->
-    <!--        id3-->
-    <!--    </div>-->
-</div>
+<div id="inputs"><input type="file" id="addGpx" name="gpx"></div>
+<div id="gradients"></div>
 <div id="map"></div>
-
-
-<script>
-    const grads = document.getElementById("gradients");
-
-
-    const COLORS = [
-        {color: 'purple', pos: 0},
-        {color: 'blue', pos: 10},
-        {color: 'green', pos: 15},
-        {color: 'yellow', pos: 25},
-        {color: 'orange', pos: 30},
-        {color: 'red', pos: 70}
-    ]
-
-
-    for (let i = 1; i < COLORS.length; i++) {
-        grads.innerHTML += `
-        <div id="id4" class="tableDiv"
-        style="background-image: linear-gradient(to right, ${COLORS[i-1].color}, ${COLORS[i].color});">
-            <div>${COLORS[i].pos}</div>
-        </div>`
-    }
-
-
-</script>
 
 <script src="index.js" type="module">
 </script>
@@ -91,7 +52,7 @@
 
     .tableDiv {
         display: table-cell;
-        width: 5vw;
+        width: 9vw;
     }
 
 
